--- a/Client/pages/about.html
+++ b/Client/pages/about.html
@@ -1,77 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
     <!-- google fonts roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <title>About Us | Grow&Nourish AI</title>
 </head>
+
 <body>
+
+
+    <div class="nav">
+        <div id="header">
+            <img id="logo" src="templates/logo.png">
+        </div>
+        <ul class="navText">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Our Models ▾</a>
+                <ul class="dropdown">
+                    <li><a href="http://127.0.0.1:5000">Crop Recommendation Model</a></li>
+                    <li><a href="templates/fert.html">Fertilizer Advisor Model</a></li>
+                </ul>
+            </li>
+            <li><a
+                    href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">ChatBot</a>
+            </li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <div id="google_translate_element"></div>
+    </div>
+
+
+
+
+
     <div class="about">
         <div>
-            <img  class="abtimg" src="..assets/bg.jpeg">
+            <img class="abtimg" src="../Assets/pexels-binyamin-mellish-169523.jpg">
         </div>
         <div class="abttext">
-            <center><h1>Grow&NourishAI</h1></center>
+            <center>
+                <h1>Grow&NourishAI</h1>
+            </center>
             <br><br>
             <div class="obj">
-                <center><h2>Our Team Objectives</h2></center>
+                <center>
+                    <h2>What is Grow&Nourish AI?</h2>
+                </center>
             </div><br>
-            <center><hr></center><br><br>
+            <center>
+                <hr>
+            </center><br><br>
             <div class="cnt">
-                The objective of our models is to equip the farmers with tailored recommendations for crop varieties that suit their unique soil and climate conditions. By leveraging various data inputs such as soil nutrient levels, pH, crop nutrient requirements, and environmental factors, farmers can optimize their fertilizer usage. This not only minimizes nutrient runoff and leaching but also mitigates the risk of water pollution and eutrophication.
+                Grow&Nourish AI is a Web Platform which offers easy to use and affordable agricultural aids; considering the interests of the farmers and agronomists.
+                <br><br>
+                <h2 style="font-size: 20px;">Why Grow&Nourish AI?</h2>
+                <br>
+                Our models, being highly efficient, provide our users with high accuracy recommendations on crops and advises on fertilisers, which ultimately aids the farmers and agronomists in growing healthy crop, with less probability of crop failure.
             </div>
             <br><br>
             <div class="icons">
                 <div>
-                    <i class="fa-solid fa-handshake"></i><p>EFFECIENCY</p>
+                    <i class="fa-solid fa-handshake"></i>
+                    <p>EFFECIENCY</p>
                 </div>
                 <div>
-                    <i class="fa-solid fa-chart-line"></i><p>TRUST</p>
+                    <i class="fa-solid fa-chart-line"></i>
+                    <p>TRUST</p>
                 </div>
                 <div>
-                    <i class="fa-solid fa-hand-holding-heart"></i><p>VALUE</p>
+                    <i class="fa-solid fa-hand-holding-heart"></i>
+                    <p>VALUE</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="about">
-    <div class="abtxt">
+        <div class="abtxt">
             <div class="obj">
-                <center><h2>Who We Are</h2></center>
+                <center>
+                    <h2>Who are we?</h2>
+                </center>
             </div><br>
-            <center><hr></center><br><br>
+            <center>
+                <hr>
+            </center><br><br>
             <div class="cnt">
-                We are a group of four 1st year undergraduates of National Institute of Technology Patna coming from different disciplines.Members are as follows:
+                We are a group of four 1st year undergraduates of National Institute of Technology Patna coming from
+                different disciplines.Members are as follows:
                 <div class="our">
-                    <div><ol>
-                    <li>Manya Gupta</li>
-                    <br><li>Prisha Garg</li>
-                    <br><li>Shanvi Dixit</li>
-                    <br><li>Shaivya Tripathi</li>
-                </ol>
-            </div>
-            <div><ul>
-                <li>manyag.ug23.ee@nitp.ac.in</li>
-                <br><li>prishag.ug23.ma@nitp.ac.in</li>
-                <br><li>shanvid.ug23.ch@nitp.ac.in</li>
-                <br><li>shaivyat.ug23.ee@nitp.ac.in</li>
-            </ul>
-            </div></div>
+                    <div>
+                        <ol>
+                            <br>
+                            <li>Manya Gupta | manyag.ug23.ee@nitp.ac.in</li>
+                            <br>
+                            <li>Prisha Garg | prishag.ug23.ma@nitp.ac.in</li>
+                            <br>
+                            <li>Shanvi Dixit | shanvid.ug23.ch@nitp.ac.in</li>
+                            <br>
+                            <li>Shaivya Tripathi | shaivyat.ug23.ee@nitp.ac.in</li>
+                        </ol>
+                    </div>
+                </div>
             </div>
             <br><br>
+        </div>
+        <div>
+            <img class="abimg" src="../Assets/pexels-mark-stebnicki-2252584.jpg">
+        </div>
     </div>
-    <div>
-        <img class="abimg" src="bg.jpeg">
+
+
+    <div class="footer">
+        <div id="head">Grow&NourishAI</div><br>
+        <div class="usefulLinks">
+            <div>Useful Links</div>
+            <ul id="ulinkslists">
+                <li class="uLinks"><a href="http://127.0.0.1:5000">Crop Recommendation model</a></li>
+                <li class="uLinks"><a href="templates/fert.html">Fertilizer Advisor model</a></li>
+                <li class="uLinks"><a
+                        href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">Chatbot</a>
+                </li>
+                <li class="uLinks"><a href="about.html">About Us</a></li>
+                <li class="uLinks"><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </div>
     </div>
-</div>
     <script src="https://kit.fontawesome.com/f6203f3931.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
