--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -28,12 +28,13 @@
 </head>
 
 <body>
+
     <div class="nav">
         <div id="header">
             <img id="logo" src="templates/logo.png">
         </div>
         <ul class="navText">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
                     <li><a href="http://127.0.0.1:5000">Crop Recommendation Model</a></li>
@@ -48,6 +49,8 @@
         </ul>
         <div id="google_translate_element"></div>
     </div>
+
+
     <div class="hero">
         <div id="title">
             Grow&Nourish AI
@@ -185,8 +188,8 @@
             <div class="usefulLinks">
                 <div>Useful Links</div>
                 <ul id="ulinkslists">
-                    <li class="uLinks"><a href=http://127.0.0.1:5000">Crop Recommendation model</a></li>
-                    <li class="uLinks"><a href="templates/fert.html">Fertilisor Advisor model</a></li>
+                    <li class="uLinks"><a href="http://127.0.0.1:5000">Crop Recommendation model</a></li>
+                    <li class="uLinks"><a href="templates/fert.html">Fertilizer Advisor model</a></li>
                     <li class="uLinks"><a
                             href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">Chatbot</a>
                     </li>
